[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/level_africa/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/level_africa/art/audio/sfx/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/level_africa/art/audio/sfx/shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://src/level_africa/Actors/Gun.gd" type="Script" id=9]
[ext_resource path="res://assets/level_africa/art/player/indy.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "crouch"
length = 0.01
loop = true
step = 0.25

[sub_resource type="Animation" id=2]
resource_name = "falling"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=3]
resource_name = "falling_weapon"
length = 0.5
loop = true
step = 0.25

[sub_resource type="Animation" id=4]
length = 5.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.25, 3.75, 4.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 4, 6, 5 ]
}

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
step = 0.25

[sub_resource type="Animation" id=6]
length = 0.7
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.19, 0.37 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
step = 0.25

[sub_resource type="Animation" id=8]
length = 1.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0 ]
}

[sub_resource type="Animation" id=9]
length = 1.25
loop = true
step = 0.25

[sub_resource type="Animation" id=10]
length = 1.25
loop = true
step = 0.25

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 14, 30.5 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 28
script = ExtResource( 1 )

[node name="ShootAnimation" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="PlatformDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.6
anims/crouch = SubResource( 1 )
anims/falling = SubResource( 2 )
anims/falling_weapon = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/idle_weapon = SubResource( 5 )
anims/jumping = SubResource( 6 )
anims/jumping_weapon = SubResource( 7 )
anims/run = SubResource( 8 )
anims/run_weapon = SubResource( 9 )
anims/standing_weapon_ready = SubResource( 10 )
next/jumping = "falling"

[node name="Camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.7, 0.7 )
process_mode = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -30.5 )
shape = SubResource( 11 )

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="SpeechLabel" type="RichTextLabel" parent="."]
margin_left = -66.0
margin_top = -109.0
margin_right = 62.0
margin_bottom = -45.0
rect_clip_content = false
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
meta_underlined = false
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 10 )
hframes = 3
vframes = 4
frame = 10

[node name="Gun" type="Position2D" parent="Sprite"]
position = Vector2( 17, 3 )
script = ExtResource( 9 )

[node name="Shoot" type="AudioStreamPlayer2D" parent="Sprite/Gun"]
position = Vector2( -30.6589, -6.13176 )
stream = ExtResource( 4 )

[node name="Cooldown" type="Timer" parent="Sprite/Gun"]
process_mode = 0
wait_time = 0.3
one_shot = true
